<resources>
    <string name="app_name">GasTrack</string>
    <string name="settingsText">Settings</string>
    <string name="addTripButtonText">Add Trip</string>
    <string name="addRefuelButtonText">Add Refuel</string>
    <string name="milesTraveledText">Miles Traveled:</string>
    <string name="gasConsumedText">Gas Consumed:</string>
    <string name="gasBoughtText">Gas Bought:</string>
    <string name="moneySpentText">Money Spent:</string>
    <string name="submitButtonText">Submit</string>
    <string name="applyButtonText">Apply</string>
    <string name="placeholderText">placeholder</string>
    <string name="githubPage">https://github.com/just-an-e</string>
    <string-array name="cars_array">
        <item>Honda Civic</item>
        <item>Honda Accord</item>
        <item>Honda Odyssey</item>
    </string-array>
</resources>